# qr-code-generator-api-214e37546-1d6a-43c0-a9db-1de45302a145

./: .env.example  README.md  pyproject.toml  schema.prisma
project/: api_documentation_service.py  check_permission_service.py  create_batch_request_service.py  customize_qr_code_service.py  generate_qr_code_service.py  get_system_logs_service.py  get_user_preferences_service.py  login_service.py  logout_service.py  security_status_service.py  server.py  update_user_preferences_service.py
